Modules/aws_vpc/main.tf
###########################################################
## RESOURCES
###########################################################

resource "aws_vpc" "vpc" {
  cidr_block       = var.vpc_cidr_block
  instance_tenancy = "default"
  enable_dns_hostnames = var.enable_dns_hostnames

  tags = {
    Name = var.vpc_name
  }
}
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id
  tags   = {
      Name = var.igw_name 
  }
}
resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.vpc.id
  tags   = {
      Name = "Public Route Table"
  }

}
resource "aws_route_table" "private_rt" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "Private Route Table"
  }
}
################################################
### Subnets and Others
################################################
resource "aws_subnet" "public_subnet" {
  vpc_id     = aws_vpc.vpc.id
  cidr_block = "10.0.1.0/24"
  map_public_ip_on_launch = true
  availability_zone = "us-east-1a"
  tags = {
    Name = "Public Subnet 1"
  }
}
resource "aws_subnet" "private_subnet" {
  vpc_id     = aws_vpc.vpc.id
  cidr_block = "10.0.2.0/24"
  map_public_ip_on_launch = false
  availability_zone = "us-east-1a"
  tags = {
    Name = "Private Subnet 1"
  }
}
# resource "aws_subnet" "public_subnets" {
#   vpc_id                  = aws_vpc.vpc.id
#   count                   = length(var.public_subnets_cidr_block)
#   cidr_block              = element(var.public_subnets_cidr_block, count.index)
#   availability_zone       = element(var.availability_zones, count.index)
#   map_public_ip_on_launch = true
#   tags = {
#     Name = "Public Subnet ${element(var.availability_zones, count.index)}"
#   }
# }
# resource "aws_subnet" "private_subnets" {
#   vpc_id                  = aws_vpc.vpc.id
#   count                   = length(var.private_subnets_cidr_block)
#   cidr_block              = element(var.private_subnets_cidr_block, count.index)
#   availability_zone       = element(var.availability_zones, count.index)
#   map_public_ip_on_launch = true
#   tags = {
#     Name = "Pirvate Subnet ${element(var.availability_zones, count.index)}"
#   }
# }
resource "aws_eip" "nat_eip" {
  vpc        = true
}
resource "aws_nat_gateway" "nat_gateway" {
  //allocation_id = aws_eip.example.id
  subnet_id     = aws_subnet.public_subnet.id
  allocation_id = aws_eip.nat_eip.id
  tags = {
    Name = "Public NAT GW"
  }
  //depends_on = [aws_internet_gateway.igw]
}

################################################
### NETWORK CONNECTIONS
################################################
# Route for NAT
resource "aws_route" "natgw_rt" {
  route_table_id         = aws_route_table.private_rt.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.nat_gateway.id
}
# Route table associations for Public Subnets
resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public_subnet.id
  route_table_id = aws_route_table.public_rt.id
}
# Route table associations for Private Subnets
resource "aws_route_table_association" "private" {
  subnet_id      = aws_subnet.private_subnet.id
  route_table_id = aws_route_table.private_rt.id
}

resource "aws_route" "public_internet_gateway" {
  route_table_id         = aws_route_table.public_rt.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.igw.id
}
